# pylaunchy

./: .hgtags  Building.txt  ChangeLog.txt  ExportedCatItem.cpp  ExportedCatItem.h  Precompiled.h  PyLaunchy.iss  PyLaunchy.sln  PyLaunchyPlugin.h  README.md  SConstruct  ScriptPlugin.h  make_setup.bat  post_build.bat  python_export.cpp  python_export_ScriptPlugin.cpp  python_export_catalog.cpp  python_export_qstring.cpp
doc/: Makefile  make.bat  make_docs.bat
doc/extension/eclim/sphinx/: builder.py
doc/source/: community_plugins.rst  conf.py  credits.rst  debugging.rst  devdoc.rst  downloads.rst  faq.rst  index.rst  install.rst  launchy.py  launchy.rst  main.rst  plugin_howto.rst  plugins.rst  pydiry.rst  pygoy.rst  pywebindex.rst  settings.rst  simple_plugin.rst  userdoc.rst
doc/source/.static/: eclimdoc.css  style.css
doc/source/.templates/: index.jinja  index.pylaunchy  layout.html
doc/source/_templates/: analytics.html  extrafooter.html  layout.html  links.html
install/: PyLaunchy.iss  make_setup.bat
install/lib/PyQt4/: QtCore.pyd  __init__.py
lib/: sip.pyd
lib/PyQt4/: QtGui.pyd  pyqtconfig.py
plugins/: pyexplorey.py  pygo-y.py  pygo-y.readme.txt
plugins/PyCalc/: pycalc.py
plugins/PyDiry/: pydiry.py
plugins/PyDiry/lib/PyDiry/: pydiry.ui
plugins/PyWebIndex/: pywebindex.py
pylaunchy/: ExportedCatItem.h  ExportedInputData.cpp  ExportedInputData.h  NullScriptPlugin.cpp  NullScriptPlugin.h  Precompiled.h  PyLaunchy.pro  PyLaunchy.vcproj  PyLaunchyPlugin.cpp  PyLaunchyPlugin.h  PyLaunchyPlugin.rc  PyLaunchy_resource.rc  PythonUtils.h  ScriptDataStructures.h  ScriptPlugin.h  ScriptPluginInfo.h  ScriptPluginWrapper.cpp  ScriptPluginWrapper.h  ScriptPluginsManager.cpp  ScriptPluginsManager.h  catalog.cpp  catalog.h  launchy.py  plugin_interface.cpp  plugin_interface.h  pylaunchy.py  python_export.cpp  python_export_ScriptPlugin.cpp  python_export_catalog.cpp  python_export_pylaunchy.cpp
pylaunchy/ezlogger/: ezlogger_format_policy.hpp
pylaunchy/pylaunchy/: NullScriptPlugin.h  PyLaunchyPlugin.h  PyLaunchyPluginDefines.h  ScriptDataStructures.h  ScriptPluginWrapper.cpp  pylaunchy.py  python_export_catalog.cpp
pylaunchy/windows/: PyLaunchy.sln  dev.bat  post_build.bat
scripts/: MySimplePlugin.py  init.py  pyexplorey.py  pygo-y.py  pygo-y_gui.py  pylaunchy.py  pysimple.py  pyverby.py  pywebindex.py  pywebindex.readme.txt  pywebindex.ui  pywebindex_ui.py  skeleton.py  test.py
scripts/PyDiry/: pydiry.py
scripts/PyWebIndex/lib/PyWebIndex/: pywebindex.ui
src/: CMakeLists.txt  PyLaunchy.pro  PyLaunchyCommon.pro  PyLaunchyUnitTest.pro  SConstruct  qt4.py  refactor.txt
src/cmake/modules/: FindGoogleTest.cmake  LaunchyDown.cmake  LaunchyUp.bat  LaunchyUp.cmake  MacroMSVCPrecompiled.cmake
src/ezlogger/: ezlogger.hpp
src/pylaunchy/: CMakeLists.txt  GlobalPythonModuleData.cpp  GlobalPythonModuleData.h  NullScriptPlugin.cpp  Precompiled.h  PyLaunchyPlugin.cpp  PyLaunchyPlugin.h  PyLaunchyPlugin.qrc  PythonInitializer.cpp  PythonInitializer.h  ScriptDataStructures.h  ScriptPlugin.h  ScriptPluginRegisterer.h  ScriptPluginWrapper.cpp  ScriptPluginWrapper.h  ScriptPluginsManager.cpp  ScriptPluginsManager.h  ScriptPluginsSynchronizer.cpp  ScriptPluginsSynchronizer.h  ScriptsDirectoryConfig.cpp  ScriptsDirectoryConfig.h  SimpleQSettings.h  SimpleSettings.h  catalog.cpp  plugin_interface.cpp  pylaunchy.py  pylaunchy_ezlogger_adapter.h  python_export.cpp  python_export_pylaunchy.cpp  python_export_qstring.cpp
src/pylaunchy/launchy/: catalog.h  readme.txt
src/pylaunchy/python_export/: python_export.cpp  python_export.h  python_export_ScriptPlugin.cpp  python_export_ScriptPlugin.h  python_export_catalog.cpp  python_export_catalog.h  python_export_pylaunchy.cpp  python_export_pylaunchy.h  python_export_qstring.cpp  python_export_qstring.h
src/pylaunchy/qt_utils/: QSettingsWrapper.cpp  QSettingsWrapper.h  QTemporaryFileWrapper.cpp  QTemporaryFileWrapper.h
src/pylaunchy_unit_test/: CMakeLists.txt  ScriptPluginWrapperTest.cpp  ScriptsDirectoryConfigTest.cpp  main.cpp
src/windows/: PyLaunchy.sln  PyLaunchy.vcproj  dev.bat  run_cmake.bat  run_tests.bat  run_unit_test.bat  set_build_environment.bat  set_environment.bat.example
