CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(PyLaunchy)

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})
IF(MSVC)
	INCLUDE(MacroMSVCPrecompiled)
ENDIF(MSVC)

OPTION(WANT_TEST    "Perform unit tests" OFF)

IF(WANT_TEST)
	ENABLE_TESTING()
ENDIF(WANT_TEST)

SUBDIRS(pylaunchy)
SUBDIRS(pylaunchy_unit_test)